--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,27 @@
-version: "3"
-services:
-  selenium-hub:
-    image: selenium/hub:4.21.0-20240524
-    container_name: selenium-hub
-    ports:
-      - "4444:4444"
+selenium-hub:
+  image: selenium/hub:4.21.0
+  container_name: selenium-hub
+  ports:
+    - "4444:4444"
 
-  chrome:
-    image: selenium/node-chrome:4.21.0-20240524
-    volumes:
-      - /dev/shm:/dev/shm
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+chrome:
+  image: selenium/node-chrome:4.21.0
+  volumes:
+    - /dev/shm:/dev/shm
+  depends_on:
+    - selenium-hub
+  environment:
+    - SE_EVENT_BUS_HOST=selenium-hub
+    - SE_EVENT_BUS_PUBLISH_PORT=4442
+    - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
 
-  firefox:
-    image: selenium/node-firefox:4.21.0-20240524
-    volumes:
-      - /dev/shm:/dev/shm
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+firefox:
+  image: selenium/node-firefox:4.21.0
+  volumes:
+    - /dev/shm:/dev/shm
+  depends_on:
+    - selenium-hub
+  environment:
+    - SE_EVENT_BUS_HOST=selenium-hub
+    - SE_EVENT_BUS_PUBLISH_PORT=4442
+    - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
