--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3"
+
 services:
   selenium-hub:
     image: selenium/hub:4.21.0
@@ -13,8 +15,6 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    volumes:
-      - /dev/shm:/dev/shm
 
   firefox:
     image: selenium/node-firefox:4.21.0
@@ -24,5 +24,3 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    volumes:
-      - /dev/shm:/dev/shm
