--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 version: "3"
-
 services:
   selenium-hub:
     image: selenium/hub:4.21.0
     container_name: selenium-hub
     ports:
+      - "4442:4442"
+      - "4443:4443"
       - "4444:4444"
 
   chrome:
     image: selenium/node-chrome:4.21.0
+    shm_size: 2gb
     depends_on:
       - selenium-hub
     environment:
@@ -18,6 +20,7 @@ services:
 
   firefox:
     image: selenium/node-firefox:4.21.0
+    shm_size: 2gb
     depends_on:
       - selenium-hub
     environment:
